istio/istio-tutorial-master/istiofiles/destination-rule-recommendation-LB_RANDOM.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation
spec:
  host: recommendation
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
---
