istio/istio-tutorial-master/istiofiles/virtual-service-recommendation-503.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-vs
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: app-recommendation
    fault:
      abort:
        percentage:
          value: 50
        httpStatus: 503
---
