istio/istio-tutorial-master/istiofiles/virtual-service-recommendation-v2-test-75_25.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-vs
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v1
      weight: 10
    - destination:
        host: recommendation
        subset: version-v2
      weight: 90
---
