istio/istio-tutorial-master/istiofiles/virtual-service-recommendation-v2-test.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-vs
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
---
